# Nifty-Orderflow

./: Project_Roadmap_and_Architecture.md  developer.md  main.py  pyproject.toml  requirements.txt
app/: routes.py  socket_events.py
core/engine/: versova.py
core/fyers/: auth.py
static/js/: chart.js
templates/: base.html  chart.html
tests/: test_auto_login.py
ticker/: fyers_sm.py
