[project]
name = "nifty-orderflow"
version = "1.0.0"
description = "Professional Order Flow Analysis Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "flask-socketio",
    "fyers-apiv3",
    "SQLAlchemy",
    "polars",
    "gunicorn",
    "eventlet",
    "python-dotenv",
    "setuptools",
    "pyotp",
    "requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
